# phantom-wasm-micro-runtime

./: CMakeLists.txt
core/: config.h
core/iwasm/common/: wasm_native.c  wasm_runtime_common.c
core/iwasm/include/: wasm_c_api.h  wasm_export.h
core/iwasm/interpreter/: wasm_interp_classic.c  wasm_runtime.c
core/iwasm/libraries/libc-wasi/: libc_wasi_wrapper.c
core/iwasm/libraries/libc-wasi/sandboxed-system-primitives/include/: wasmtime_ssp.h
core/iwasm/libraries/libc-wasi/sandboxed-system-primitives/src/: random.c
core/shared/platform/common/posix/: posix_memmap.c
core/shared/platform/genode/: genode_debug.cc  genode_missing_types.h  implementations.c  malloc_adapter.h  platform_init.c  platform_internal.h  print_adapter.h  shared_platform.cmake  string_adapter.h  stubs.c  stubs.h  wasi_missing.c  wasi_missing.h
core/shared/platform/phantom-genode/: platform_init.c  platform_internal.h  print_adapter.h  shared_platform.cmake  string_adapter.h  stubs.c  stubs.h
core/shared/utils/: bh_queue.c  runtime_timer.c
samples/very-basic/: build.sh  run.sh
samples/very-basic/src/: main.c
samples/very-basic/wasm-apps/: calculate_e.c  img_decoder.c  phantom_api.h  simple_functions.c  wasi_functions.c  weather-images.h
